working illustration overflow fix

--- a/src/components/LinkShorten/styles.css
+++ b/src/components/LinkShorten/styles.css
@@ -1,7 +1,7 @@
 .link-shorten {
   background-color: hsl(230, 25%, 95%);
   width: 100%;
-  margin-top: 18rem;
+  margin-top: 10rem;
 }
 
 .link-shorten-form-wrapper {
